--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,8 @@
 [submodule "dotbot"]
-	path = dotbot
+	path = meta/dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
-[submodule "dotbot-pip"]
-	path = dotbot-pip
-	url = https://github.com/sobolevn/dotbot-pip
-	ignore = dirty
 [submodule "dotbot-brew"]
-	path = dotbot-brew
+	path = meta/dotbot-brew
 	url = https://github.com/d12frosted/dotbot-brew.git
 	ignore = dirty
