--- a/meta/base.yaml
+++ b/meta/base.yaml
@@ -1,23 +1,17 @@
-- clean:
-    - '~'
-    - '~/.config'
-    - '~/.config/fish'
-    - '~/.config/fish/conf.d'
-    - '~/.config/fish/functions'
-    - '~/.config/git'
-    - '~/.config/starship'
-    - '~/.local/share/history'
-    - '~/.ssh'
-    - '~/.ssh/config.d'
-
 - defaults:
     link:
-      # when create is true, create parent directories to the link
-      create: true
-      # removes old target if it's a symlink
-      relink: true
-      # force removes the old target, file or folder
-      # if you want to change all dotfiles on this machine to dotfiles in this folder, set force=true
-      # force: true
-      # glob treats * as a wildcard, so perform link operations on all matches
-      glob: true
+        relink: true
+        create: true
+        force: true
+    shell:
+        stdout: true
+        stderr: true
+
+- create:
+    - $HOME/.config
+
+- clean:
+    $HOME:
+        force: true
+    $HOME/.config:
+        recursive: true
