feat: compatible with apple m1

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -55,6 +55,8 @@ brew "wget"
 brew "fd"
 # Command-line fuzzy finder written in Go
 brew "fzf"
+# Clone of cat(1) with syntax highlighting and Git integration
+brew "bat"
 
 # Misc
 brew "brew-cask-completion"
