--- a/meta/configs/terminal.yaml
+++ b/meta/configs/terminal.yaml
@@ -6,12 +6,9 @@
     # fish shell
     ~/.config/fish/config.fish:
       path: config/fish/config.fish
-    ~/.config/fish/conf.d:
-      path: config/fish/conf.d/*.fish
-      glob: true
-    ~/.config/fish/functions:
-      path: config/fish/functions/*.fish
-      glob: true
+    ~/.config/fish/conf.d: config/fish/conf.d/
+    ~/.config/fish/functions: config/fish/functions/
+
 
 
 
