--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,9 +11,9 @@
   "editor.formatOnPaste": false,
   "editor.tabCompletion": "on",
   "editor.wordWrap": "on",
-  "editor.rulers": [80, 100, 120],
+  // "editor.rulers": [80, 100, 120],
   "editor.roundedSelection": false,
-  "editor.minimap.enabled": true,
+  "editor.minimap.enabled": false,
   "editor.minimap.renderCharacters": false,
   "editor.minimap.maxColumn": 100,
   "editor.renderWhitespace": "boundary",
