--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -91,12 +91,22 @@ cask "iterm2"
 cask "discord"
 cask "slack"
 
+# Chat / IM
+cask "vlc"
+cask "spotify"
+
 # Misc
 cask "postman"
-cask "spotify"
+# window manager
+cask "rectangle"
 cask "the-unarchiver"
-cask "font-hack-nerd-font"
+cask "docker"
 cask "netnewswire"
+# Cross-platform desktop GUI app to clean image metadata
+cask "exifcleaner"
+# An open-source screen recorder built with web technology.
+cask "kap"
+cask "the-unarchiver"
 
 # Java Development Kit
 cask "adoptopenjdk/openjdk/adoptopenjdk13"
@@ -108,6 +118,7 @@ cask "atom"
 cask "android-studio"
 
 # Fonts
+cask "font-hack-nerd-font"
 cask "font-anonymous-pro"
 cask "font-blex-mono-nerd-font"
 cask "font-fira-code-nerd-font"
