--- a/meta/configs/terminal.yaml
+++ b/meta/configs/terminal.yaml
@@ -3,13 +3,9 @@
     ~/.config/omf: config/omf/
     # wtf
     ~/.config/wtf: config/wtf/
-    # fish shell
+    # fish shell config files
     ~/.config/fish/config.fish:
       path: config/fish/config.fish
     ~/.config/fish/conf.d: config/fish/conf.d/
     ~/.config/fish/functions: config/fish/functions/
     ~/.config/fish/completions: config/fish/completions/
-
-
-
-
