--- a/.editorconfig
+++ b/.editorconfig
@@ -4,11 +4,27 @@ root = true
 
 [*]
 charset = utf-8
-trim_trailing_whitespace = true
 end_of_line = lf
+indent_size = 2
 indent_style = space
 insert_final_newline = true
-indent_size = 2
+trim_trailing_whitespace = true
 
 [*.py]
 indent_size = 4
+
+[*.{yaml,yml}]
+indent_size = 2
+
+# Matches the exact files either package.json or .travis.yml
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
+
+[Makefile]
+indent_style = tab
+
+# https://google.github.io/styleguide/shell.xml?showone=Indentation#Indentation
+[*.sh]
+indent_style = space
+indent_size = 2
