--- a/ssh/config
+++ b/ssh/config
@@ -1,28 +1,35 @@
+# vi: ft=sshconfig
 # copy to ~/.ssh/config
-# Include other config files, for local system or system-specific ones.
-#
+# Include other config files, for local system or system-specific ones
 # KEEP THIS LINE AT THE TOP; otherwise it's conditional by the first `Host`
-# directive.
+# directive
 
 Include config.d/*
 
 Host github.com
-	ControlMaster auto
-	ControlPersist 120
+  ControlMaster auto
+  ControlPersist 120
 
 Host *
-	# Always use SSH2.
-	Protocol 2
 
-	# Use a shared channel for all sessions to the same host,
-	# instead of always opening a new one. This leads to much
-	# quicker connection times.
-	ControlMaster auto
-	ControlPath ~/.ssh/control-%h-%p-%r.sock
-	ControlPersist 1800
+  # Always use SSH2
+  Protocol 2
+  IgnoreUnknown UseKeychain
 
-	# also this stuff
-	Compression yes
-	TCPKeepAlive yes
-	ServerAliveInterval 20
-	ServerAliveCountMax 10
+  # Use a shared channel for all sessions to the same host
+  # instead of always opening a new one. This leads to much
+  # quicker connection times
+  ControlMaster auto
+  ControlPath ~/.ssh/control-%h-%p-%r.sock
+  ControlPersist 1800
+
+  # also this stuff
+  AddKeysToAgent yes
+  Compression yes
+  ConnectTimeout 30
+  ForwardX11 no
+  SendEnv LANG LC_*
+  ServerAliveCountMax 10
+  ServerAliveInterval 30
+  TCPKeepAlive yes
+  UseKeychain yes
