--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,11 +9,11 @@ tap "homebrew/services"
 tap "homebrew/cask-fonts"
 
 # Install GNU core utilities (those that come with OS X are outdated).
-brew "coreutils"
+# brew "coreutils"
 # Install some other useful utilities like `sponge`.
 brew "moreutils"
 # Install GNU `find`, `locate`, `updatedb`, and `xargs`, `g`-prefixed.
-brew "findutils"
+# brew "findutils"
 # Install File comparison utilities
 brew "diffutils"
 
@@ -44,9 +44,7 @@ brew "fnm"
 
 # Python
 brew "python"
-brew "pyenv"
 brew "virtualenv"
-brew "pyenv-virtualenv"
 # pipx — Install and Run Python Applications in Isolated Environments
 brew "pipx"
 
