--- a/config/npm/.npmrc
+++ b/config/npm/.npmrc
@@ -1,3 +1,8 @@
+init-author-url="https://github.com/codenuru"
+init-license=MIT
+init-version=0.0.0
+save-exact=true
+save=true
 depth=0
 loglevel=warn
 progress=false
