--- a/config/npm/.npmrc
+++ b/config/npm/.npmrc
@@ -1,4 +1,4 @@
-init-author-url="https://github.com/codenuru"
+init-author-url="https://github.com/enesdir"
 init-license=MIT
 init-version=0.0.0
 save-exact=true
