--- a/env.fish.example
+++ b/env.fish.example
@@ -4,8 +4,8 @@ set -l GIT_AUTHOR_MAIL              "xx@xx.com"
 
 # Git
 set GIT_AUTHOR_NAME              "$AUTHOR_NAME"
-set -g GIT_COMITTER_NAME            "$GIT_AUTHOR_NAME"
+set -g GIT_COMMITTER_NAME            "$GIT_AUTHOR_NAME"
 
 
 set GIT_AUTHOR_MAIL                 "$AUTHOR_MAIL"
-set -g GIT_COMITTER_EMAIL           "$GIT_AUTHOR_MAIL"
+set -g GIT_COMMITTER_EMAIL           "$GIT_AUTHOR_MAIL"
