--- a/meta/configs/firstrun.yaml
+++ b/meta/configs/firstrun.yaml
@@ -28,5 +28,6 @@
     - "~/.cache/npm"
     - "~/.cache/pip"
     - "~/.config"
+    - "~/.config/env"
     - "~/.local/bin"
     - "~/.local/share/history"
